force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_drop_out_approach__c.field-meta.xml
<CustomField>
    <fullName>su_drop_out_approach__c</fullName>
    <description>Tell us how you will monitor levels and reasons for disengagement.</description>
    <inlineHelpText>How will you track referrals to your project who subsequently drop out?</inlineHelpText>
    <label>SU - Drop Out Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>