force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_effective__c.field-meta.xml
<CustomField>
    <fullName>su_effective__c</fullName>
    <description>How will you involve service users in planning, implementing and, as needed, reviewing and revising your project and how will you make sure their voices are heard?</description>
    <inlineHelpText>How will you work with service users to ensure that the project works effectively to tackle their needs?</inlineHelpText>
    <label>SU - Effective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>