force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_estimation_methodology__c.field-meta.xml
<CustomField>
    <fullName>su_estimation_methodology__c</fullName>
    <description>Tell us how you will monitor levels and reasons for disengagement.</description>
    <inlineHelpText>How have you determined the estimated number of service users you will work with?</inlineHelpText>
    <label>SU - Estimation Methodology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>