force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_expected_users__c.field-meta.xml
<CustomField>
    <fullName>su_expected_users__c</fullName>
    <inlineHelpText>Total number of individuals you expect to use your service</inlineHelpText>
    <label>SU - Expected Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>