force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_potential_users__c.field-meta.xml
<CustomField>
    <fullName>su_potential_users__c</fullName>
    <description>Page Title:Service User Intake</description>
    <inlineHelpText>Total number of individuals that are potential service users</inlineHelpText>
    <label>SU - Potential Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>