force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_prioritisation__c.field-meta.xml
<CustomField>
    <fullName>su_prioritisation__c</fullName>
    <description>Set out how you will ensure that your cohort and outcomes are clearly defined in order that they meet the identified needs of your service users.</description>
    <inlineHelpText>How will you ensure you prioritise service users who need the most support rather than those easiest to achieve outcomes for?</inlineHelpText>
    <label>SU - Prioritisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>