force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_referral_process__c.field-meta.xml
<CustomField>
    <fullName>su_referral_process__c</fullName>
    <inlineHelpText>How will the referral process work, or how else will users access your service?</inlineHelpText>
    <label>SU - Referral Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>