force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_research_undertaken__c.field-meta.xml
<CustomField>
    <fullName>su_research_undertaken__c</fullName>
    <description>Reference local and national sources, including discussions you have had with service users. Direct contact with service users may not always be possible given the specific expertise and sensitive approach required to engage them in the right way.</description>
    <inlineHelpText>What research have you done or referenced on the needs of potential service users?</inlineHelpText>
    <label>SU - Research Undertaken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>