force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_successful_users__c.field-meta.xml
<CustomField>
    <fullName>su_successful_users__c</fullName>
    <inlineHelpText>Total number of service users expected to achieve at least one outcome that triggers a payment</inlineHelpText>
    <label>SU - Successful Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>