force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <formula>application__r.Theme__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme</label>
    <type>Text</type>
</CustomField>